# wo-bot-control

./: .gitignore  README.md  _runtime_config.yaml  pyproject.toml  requirements-dev.txt  requirements-jetson.txt  requirements.txt  test_webrtc.py
.github/workflows/: quality-control.yml
config/: config.yaml
docs/: agent-prompt-deploy.md  deployment.md  development.md  protocol.md
scripts/: airplay-start.sh  airplay-stop.sh  deploy.sh  install.sh  setup_audio.sh  start.sh
src/: main.py
src/core/: account_client.py  aioice_patch.py  binding_manager.py  http_api.py  mdns_service.py  message_handler.py  peripheral_detector.py  service_manager.py  signal_client.py  webrtc_service.py  websocket_server.py
src/modules/extension/: base.py  dance.py  dance_1_shuffle.json  dance_2_spin.json  dance_3_box.json  dance_dj_spin.json  find_device.py  voice_broadcast.py
src/modules/motion/: controller.py  gimbal.py  hardware.py
src/modules/system/: collector.py  power_policy.py
src/modules/vision/: camera.py  media_manager.py
src/sub_services/: __init__.py  advanced_collector.py  music_player.py  py_dlna_renderer.py  remote_control.py  software_manager.py
src/utils/: logger.py  qr_scanner.py  tts.py
tests/: test_modules.py  test_websocket.py
